# tflite-vx-delegate

./: .bazelrc  .clang-format  .gitignore  BUILD  CMakeLists.txt  LICENSE  README.md  WORKSPACE  delegate_main.cc  delegate_main.h  delegate_test.cc  model_status.md  op_map.cc  op_map.h  op_status.md  utils.cc  utils.h  vsi_npu_custom_op.cc  vx_delegate_adaptor.cc
.github/workflows/: build.gcc.yml  ci_test.yml
cmake/: tflite.cmake
cmake/modules/: Findtensorflow.cmake  Findtim-vx.cmake
examples/: util.cc  util.h
examples/minimal/: BUILD  CMakeLists.txt  minimal.cc
examples/multi_device/: CMakeLists.txt  README.md  multi_device.cc
examples/python/: label_image.py
patches/: acc_correction.patch  kernel_test.patch  label_image_support.patch  modified_test.patch  tf_2_10_acc_correction.patch  tf_2_10_kernel_test.patch  tf_2_14_kernel_test.patch
patches/tflite/: 0001-Add-Customized-NBG-Tflite-Model-Support.patch
script/: KernelTest.sh
test/models/: BatchMatmul.py  int8BatchMatmul.py
test/python/: README.md  conftest.py  dump_model.py  model_cut.py  run_model.py  test_BatchMatMul.py  test_UnidirectionalSequenceLSTM.py  test_attention.py  test_batchmatmul.py  test_conv1d.py  test_conv2d.py  test_conv3d.py  test_dense.py  test_depthwise_conv2d.py  test_grucell.py  test_layout_infer.py  test_reverseV2.py  test_stack.py  test_stride_slice.py  test_transpose_conv2d.py  utils.py
